[package]
name = "relic_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing-newrelic = "0.1.2"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["json", "std"] }
tracing-futures = "0.2.5"
futures-util = "0.3.27"
massping = "0.3.5"
tokio = { version ="1.26.0", features = ["full"] }
